<resources>
    <string name="app_name">RecipeApp</string>
    <string name="title_home">Home</string>
    <string name="title_add_content">Add Content</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_profile">My Profile</string>
    <string name="title_search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>